# security-expert-agent

./: .dockerignore  .gitignore  Dockerfile  PLAN.MD  README.md  docker-compose.yml  main.py  pyproject.toml
src/: cli_expert.py  engine.py  engine_expert.py  ingest.py  main.py
src/agent/: brain.py
src/api/: api_ingest.py
src/config/: config.py
src/database/: ingestor.py  storage.py
src/web/: app.py
